# ZK-Solana-SDK

./: Anchor.toml  README.md  package.json
migrations/: deploy.ts
programs/Ncash/: Cargo.toml
programs/Ncash/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/Ncash/src/instructions/dapp/: create.rs
programs/Ncash/src/instructions/epoch/: add.rs  change_epoch_index.rs  initialize.rs
programs/Ncash/src/instructions/group/: add_member.rs  create.rs  verify_proof.rs
programs/Ncash/src/state/: dapp.rs  epoch.rs  epoch_config.rs  group.rs  proof.rs
programs/Ncash/src/utils/: common.rs  solana.rs
scripts/: package.json
scripts/src/: utils.ts
scripts/src/tx/: backFillEpoch.ts  createEpoch.ts  setupProgram.ts
sdk/: .solitarc.js  package.json
sdk/idl/: ncash.json
sdk/src/: eth-utils.ts  index.ts  pda.ts
tests/: utils.ts
tests/suites/: all.ts
